IFS-11726 - Default null added to script, public content replaced with public content item.