@@ -10,6 +10,7 @@ import org.innovateuk.ifs.application.resource.ApplicationState;
 import org.innovateuk.ifs.application.service.ApplicationRestService;
 import org.innovateuk.ifs.application.service.SectionService;
 import org.innovateuk.ifs.competition.publiccontent.resource.FundingType;
+import org.innovateuk.ifs.competition.publiccontent.resource.PublicContentItemResource;
 import org.innovateuk.ifs.competition.publiccontent.resource.PublicContentResource;
 import org.innovateuk.ifs.competition.resource.*;
 import org.innovateuk.ifs.competition.service.CompetitionRestService;
@@ -20,7 +21,7 @@ import org.innovateuk.ifs.finance.service.ApplicationFinanceRestService;
 import org.innovateuk.ifs.form.resource.SectionResource;
 import org.innovateuk.ifs.organisation.resource.OrganisationResource;
 import org.innovateuk.ifs.organisation.resource.OrganisationTypeEnum;
-import org.innovateuk.ifs.publiccontent.service.PublicContentRestService;
+import org.innovateuk.ifs.publiccontent.service.PublicContentItemRestService;
 import org.innovateuk.ifs.user.resource.Role;
 import org.innovateuk.ifs.user.resource.UserResource;
 import org.innovateuk.ifs.user.service.OrganisationRestService;
@@ -50,6 +51,7 @@ import static org.innovateuk.ifs.competition.resource.CompetitionStatus.OPEN;
 import static org.innovateuk.ifs.finance.builder.ApplicationFinanceResourceBuilder.newApplicationFinanceResource;
 import static org.innovateuk.ifs.form.builder.SectionResourceBuilder.newSectionResource;
 import static org.innovateuk.ifs.organisation.builder.OrganisationResourceBuilder.newOrganisationResource;
+import static org.innovateuk.ifs.publiccontent.builder.PublicContentItemResourceBuilder.newPublicContentItemResource;
 import static org.innovateuk.ifs.publiccontent.builder.PublicContentResourceBuilder.newPublicContentResource;
 import static org.innovateuk.ifs.user.builder.ProcessRoleResourceBuilder.newProcessRoleResource;
 import static org.innovateuk.ifs.user.builder.UserResourceBuilder.newUserResource;
@@ -87,7 +89,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
     private CompetitionThirdPartyConfigRestService competitionThirdPartyConfigRestService;
 
     @Mock
-    private PublicContentRestService publicContentRestService;
+    private PublicContentItemRestService publicContentItemRestService;
 
     @Override
     protected YourProjectCostsViewModelPopulator supplyServiceUnderTest() {
@@ -132,7 +134,9 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .build();
         ApplicationFinanceResource applicationFinance = newApplicationFinanceResource().build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
+
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -144,7 +148,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(applicantRestService.getSection(user.getId(), application.getId(), SECTION_ID)).thenReturn(applicantSection);
         when(applicationFinanceRestService.getApplicationFinance(APPLICATION_ID, ORGANISATION_ID)).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(APPLICATION_ID, SECTION_ID, ORGANISATION_ID, user);
@@ -192,7 +196,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .build();
         UserResource user = newUserResource().build();
         ApplicationFinanceResource applicationFinance = newApplicationFinanceResource().build();
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -203,7 +208,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getCompleted(APPLICATION_ID, ORGANISATION_ID)).thenReturn(singletonList(SECTION_ID));
         when(applicationFinanceRestService.getApplicationFinance(APPLICATION_ID, ORGANISATION_ID)).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(APPLICATION_ID, SECTION_ID, ORGANISATION_ID, user);
@@ -240,7 +245,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .build();
         UserResource user = newUserResource().build();
         ApplicationFinanceResource applicationFinance = newApplicationFinanceResource().build();
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -251,7 +257,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getCompleted(APPLICATION_ID, ORGANISATION_ID)).thenReturn(singletonList(SECTION_ID));
         when(applicationFinanceRestService.getApplicationFinance(APPLICATION_ID, ORGANISATION_ID)).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(APPLICATION_ID, SECTION_ID, ORGANISATION_ID, user);
@@ -286,7 +292,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         UserResource user = newUserResource().build();
         ApplicationFinanceResource applicationFinance = newApplicationFinanceResource().build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -297,7 +304,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getCompleted(APPLICATION_ID, ORGANISATION_ID)).thenReturn(singletonList(SECTION_ID));
         when(applicationFinanceRestService.getApplicationFinance(APPLICATION_ID, ORGANISATION_ID)).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(APPLICATION_ID, SECTION_ID, ORGANISATION_ID, user);
@@ -350,7 +357,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withFecEnabled(null)
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -358,13 +366,13 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(applicationRestService.getApplicationById(application.getId())).thenReturn(restSuccess(application));
         when(competitionRestService.getCompetitionById(application.getCompetition())).thenReturn(restSuccess(competition));
         when(organisationRestService.getOrganisationById(organisation.getId())).thenReturn(restSuccess(organisation));
-        when(sectionService.getCompleted(application.getId(), organisation.getId())).thenReturn(Arrays.asList(SECTION_ID));
+        when(sectionService.getCompleted(application.getId(), organisation.getId())).thenReturn(List.of(SECTION_ID));
         when(applicantRestService.getSection(user.getId(), application.getId(), SECTION_ID)).thenReturn(applicantSection);
         when(sectionService.getFundingFinanceSection(competition.getId())).thenReturn(null);
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(null);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -431,7 +439,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -445,7 +454,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(null);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -518,7 +527,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -533,7 +543,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -607,7 +617,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -621,7 +632,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -684,7 +695,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -697,7 +709,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(applicantRestService.getSection(user.getId(), application.getId(), SECTION_ID)).thenReturn(applicantSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -775,7 +787,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -789,7 +802,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -865,7 +878,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -879,7 +893,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -954,9 +968,9 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withFecEnabled(true)
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
-        PublicContentResource publicContentResource = newPublicContentResource()
-                .withHash(null)
-                .build();
+
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -970,7 +984,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -1046,7 +1060,8 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
                 .withGrantClaimPercentage(BigDecimal.valueOf(50))
                 .build();
 
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
@@ -1060,7 +1075,7 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         when(sectionService.getFecCostFinanceSection(competition.getId())).thenReturn(fecCostFinanceSection);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinance));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(competition.getId())).thenReturn(restSuccess(competitionThirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
@@ -1119,19 +1134,20 @@ public class YourProjectCostsViewModelPopulatorTest extends BaseServiceUnitTest<
         ApplicationFinanceResource applicationFinanceResource = newApplicationFinanceResource()
                 .withApplication(application.getId())
                 .build();
-        PublicContentResource publicContentResource = newPublicContentResource().withHash(null).build();
+        PublicContentResource publicContentResource = newPublicContentResource().build();
+        PublicContentItemResource publicContentItem = newPublicContentItemResource().withPublicContentResource(publicContentResource).build();
 
         when(applicationRestService.getApplicationById(application.getId())).thenReturn(restSuccess(application));
         when(competitionRestService.getCompetitionById(thirdPartyCompetition.getId())).thenReturn(restSuccess(thirdPartyCompetition));
         when(organisationRestService.getOrganisationById(organisation.getId())).thenReturn(restSuccess(organisation));
         when(applicantRestService.getSection(user.getId(), application.getId(), section.getId())).thenReturn(applicantSectionResource);
         when(applicationFinanceRestService.getApplicationFinance(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinanceResource));
-        when(sectionService.getCompleted(application.getId(), organisation.getId())).thenReturn(Arrays.asList(SECTION_ID));
+        when(sectionService.getCompleted(application.getId(), organisation.getId())).thenReturn(List.of(SECTION_ID));
         when(processRoleRestService.findProcessRole(user.getId(), application.getId())).thenReturn(restSuccess(newProcessRoleResource()
                 .withOrganisation(organisation.getId())
                 .build()));
         when(applicationFinanceRestService.getFinanceDetails(application.getId(), organisation.getId())).thenReturn(restSuccess(applicationFinanceResource));
-        when(publicContentRestService.getByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentResource));
+        when(publicContentItemRestService.getItemByCompetitionId(application.getCompetition())).thenReturn(restSuccess(publicContentItem));
         when(competitionThirdPartyConfigRestService.findOneByCompetitionId(thirdPartyCompetition.getId())).thenReturn(restSuccess(thirdPartyConfigResource));
 
         YourProjectCostsViewModel viewModel = service.populate(application.getId(), SECTION_ID, organisation.getId(), user);
